# delta-stream-backup

./: .ghci  .gitignore  README.md  backup.cabal  cabal.config  stack.yaml
app/: Main.hs
src/: Backup.hs  BackupSimple.hs  CopyCommands.hs  DBHelpers.hs  Encryption.hs  Fields.hs  FileState.hs  IngestPath.hs  LensExperiments.hs  LensExperimentsTwo.hs  Logic.hs  MirrorChanges.hs  Protocol.hs  Query.hs  Schema.hs
