name:                backup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/backup#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Backup
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cryptonite
                     , text
                     , foldl
                     , managed
                     , time
                     , transformers
                     , turtle
                     , sqlite-simple
                     , system-filepath
                     , unordered-containers
  default-language:    Haskell2010

executable backup-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backup
  default-language:    Haskell2010

test-suite backup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/backup
