name:                backup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/backup#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Backup
  other-modules:       DBHelpers
                     , Fields
                     , Schema
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , beam-core
                     , beam-sqlite
                     , beam-migrate
                     , binary
                     , bytestring
                     , cryptonite
                     , dlist
                     , exceptions
                     , extensible
                     , extra
                     , filepath
                     , hashable
                     , labels
                     , lens
                     , text
                     , foldl
                     , managed
                     , random
                     , stringsearch
                     , time
                     , transformers
                     , turtle
                     , singletons
                     , sqlite-simple
                     , string-combinators
                     , system-filepath
                     , unordered-containers
                     , vinyl
  default-language:    Haskell2010

executable backup-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backup
  default-language:    Haskell2010

test-suite backup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/backup
